--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="p-5">
     <button class="bg-green-500 pl-5 pr-5 rounded-lg p-2">Haz click!</button>
 </div>
-    <div class="border pl-4 border-green-500 w-30 pl-7">
+    <div class="border border-green-500 w-30 pl-7">
         <div class="bg-green-400 text-white pt-7 leading-relaxed pl-7">
             Inicio
 
